; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ata/extr_ata_all.c_ata_static_identify_match.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ata/extr_ata_all.c_ata_static_identify_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_static_inquiry_pattern = type { i32, i32 }
%struct.ata_params = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ata_static_identify_match(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.scsi_static_inquiry_pattern*, align 8
  %7 = alloca %struct.ata_params*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = inttoptr i64 %8 to %struct.scsi_static_inquiry_pattern*
  store %struct.scsi_static_inquiry_pattern* %9, %struct.scsi_static_inquiry_pattern** %6, align 8
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to %struct.ata_params*
  store %struct.ata_params* %11, %struct.ata_params** %7, align 8
  %12 = load %struct.ata_params*, %struct.ata_params** %7, align 8
  %13 = getelementptr inbounds %struct.ata_params, %struct.ata_params* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.scsi_static_inquiry_pattern*, %struct.scsi_static_inquiry_pattern** %6, align 8
  %16 = getelementptr inbounds %struct.scsi_static_inquiry_pattern, %struct.scsi_static_inquiry_pattern* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @cam_strmatch(i32 %14, i32 %17, i32 4)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %30

20:                                               ; preds = %2
  %21 = load %struct.ata_params*, %struct.ata_params** %7, align 8
  %22 = getelementptr inbounds %struct.ata_params, %struct.ata_params* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.scsi_static_inquiry_pattern*, %struct.scsi_static_inquiry_pattern** %6, align 8
  %25 = getelementptr inbounds %struct.scsi_static_inquiry_pattern, %struct.scsi_static_inquiry_pattern* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @cam_strmatch(i32 %23, i32 %26, i32 4)
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %31

30:                                               ; preds = %20, %2
  store i32 -1, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %29
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i64 @cam_strmatch(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
